# ibgepy

./: .gitignore  LICENSE  README.md  pyproject.toml
ibgepy/: __init__.py  pnadc.py
