[tool.poetry]
name = "ibgepy"
version = "0.1.0"
description = ""
authors = ["Silas Genário <sg.lopes26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.1.0"
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
